# agente_rme

./: .audit_import_runner.py  .bandit  .coverage  .flake8  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEVELOPER_GUIDE.md  GA_CERTIFICATION.json  GA_REPORT.md  HOTFIX_AUDIT.json  HOTFIX_CERTIFICATION.json  HOTFIX_CLI_STABILITY.json  HOTFIX_METRICS.json  HOTFIX_OTBM_HARDENING.json  HOTFIX_RELEASE_NOTES.md  HOTFIX_REPORT.md  INSTALL.md  README.md  TROUBLESHOOTING.md  UI3_1_DASHBOARD_HARDENING_REPORT.md  UI4_SERVICE_LAYER_REPORT.md  UI5_CORE_ADAPTERS_REPORT.md  UI6_WORLD_GENERATION_STUDIO_REPORT.md  UI7_VISUAL_CRITIC_STUDIO_REPORT.md  UI8_KNOWLEDGE_EXPLORER_REPORT.md  UI9_AUTONOMOUS_DESIGNER_WORKSPACE_REPORT.md  UI_DASHBOARD_REPORT.md  UI_FOUNDATION_REPORT.md  UI_SHELL_REPORT.md  USER_GUIDE.md  ZERO_WARNING_REPORT.md  _create_tests.py  _fix_flake8.py  _gen.py  (+131 more)
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
ai/: __init__.py  ollama_client.py  prompt_builder.py
assets/: __init__.py  items_loader.py  monsters_loader.py  npcs_loader.py
baseline/: FREEZE_MANIFEST.json  QUALITY_GATE_REPORT.json
blueprints/: issavi_temple.json
cache/: decorations.json  grounds.json  items.json  monsters.json  npcs.json  walls.json
config/: debug.yaml  default.yaml  development.yaml  production.yaml
core/: __init__.py  config_manager.py  enterprise.py  maintenance.py  prompt_interpreter.py  recovery.py  safe_io.py  studio.py  studio_bridge.py
data/: demo_embeddings.json  demo_pattern_profiles.json  demo_similarity_index.json  demo_style_profiles.json  export_for_generation.json  rme_connected_item_tables.json  rme_ground_border_table.json  rme_ground_specific_cases.json  rme_sprite_backed_item_ids.json
deployment/: applications.json
docs/: INSTALL.md  README.md  rme_api_reference.md
examples/: README.md  analyze_ciudades.py  cave_generator.lua  city_generator.lua  city_issavi.lua  compiler_demo.py  enterprise_demo.py  expansion_demo.py  hito13_blueprint_extractor_demo.py  hito15_ai_architect_demo.py  island_generator.lua  issavi_dungeon.lua  issavi_roshamuul_hybrid.lua  learn_architecture.py  library_dungeon.lua  map_learning_demo.py  otbm_demo.py  plan_expansion.py  playtest_demo.py  roshamuul_dungeon.lua  spawn_generator.lua  temple_generator.lua  test_borderize.lua  test_camp.lua  test_ground.lua  test_hunt.lua  test_hybrid.lua  test_issavi.lua  test_item.lua  test_roshamuul.lua  test_spawn.lua  test_spawn_radius.lua
generators/: __init__.py  city_generator.py  dungeon_generator.py  hybrid_generator.py
installer/: install_linux.sh  install_macos.sh  install_windows.ps1  run_tests.py  setup.py
logs/: hotfix_lua_extreme.lua
lua/: __init__.py  rme_dsl.lua
monster - npc/: monster.xml  npc.xml
output/: agent_metrics.json  analysis.json  balance_report.json  campaign.json  critic.json  e2e_report.json  e2e_test.otbm  expansion_report.json  generated.lua  generated.report.json  knowledge_benchmark.json  knowledge_dataset.json  knowledge_report.md  multi_agent_result.json  playtest_report.json  preview.json  qa_report.json  report.json  test_empty.otbm  test_hunt.monster.xml  test_hunt.report.json  test_mandatory.otbm  test_preview.json  test_prod_hunt.waypoints.xml  test_prod_roundtrip_dst.otbm  test_prod_spawns.otbm  test_spawns.monster.xml  test_spawns.otbm  test_spawns.waypoints.xml  world_summary.json
output_benchmark/: benchmark_summary.json  blueprint_clusters.json  blueprint_embeddings.json  blueprint_patterns.json  blueprint_rankings.json  blueprint_recommendations.json  summary.json
packaging/: rme_studio.spec
rag/: __init__.py  embeddings.py  retrieval.py  vector_store.py
release/: CHANGELOG.md  MAP_GUIDE.md  MONSTER_LIST.md  NPC_LIST.md  README.md  SPAWN_TABLE.md
rme_rendering/: __init__.py  appearance_dat_flags.py  asset_paths.py  rme_mapcolors.py  rme_visual_compat.py
scripts/: build_windows.ps1  configure_ai_provider.py  generate_triage.py  github_size_guard.py  isolate_app_runtime.py  preflight.py  secret_guard.py
templates/: empty_map.lua  ice.json  issavi.json  jungle.json  roshamuul.json  yalahar.json
tests/: test_ai_architect.py  test_asset_registry.py  test_asset_validator.py  test_autonomous_designer.py  test_balance_engine.py  test_biome_generator.py  test_blueprint_extractor_hito13.py  test_blueprint_learner.py  test_blueprint_loader.py  test_blueprint_placer.py  test_blueprint_registry.py  test_blueprint_validator.py  test_boss_expander.py  test_boss_generator.py  test_boss_room_analyzer.py  test_campaign_generator.py  test_chunk.py  test_city_analyzer.py  test_city_generator.py  test_combat_simulator.py  test_content_balancer.py  test_continent_generator.py  test_critic_report.py  test_decision_engine.py  test_density_analyzer.py  test_dungeon_generator.py  test_examples.py  test_expansion_ai.py  test_hunt_analyzer.py  test_hunt_expander.py  test_hunt_generator.py  test_infrastructure.py  test_item_indexer.py  test_loot_balancer.py  test_lore_generator.py  test_lua_exporter.py  test_map_analyzer_hito12.py  test_monster_indexer.py  test_monster_validator.py  test_mvp_integration.py  (+30 more)
tools/: _append_certify.py  eng_passport.py  eng_review_engine.py  eng_traceability.py  hotfix_audit.py  hotfix_certify.py  hotfix_cli_stability.py  hotfix_lua_hardening.py  hotfix_otbm_hardening.py  hotfix_performance.py  hotfix_regression.py  hotfix_security.py  normalize_markdown.py  real_autonomous_certification.py  real_blueprint_validation.py  real_knowledge_validation.py  real_memory_profile.py  real_otbm_certification.py  real_performance_profile.py  real_world_stress.py  run_rc1_1.py  run_ui10_3_runtime_audit.py  validate_modules.py  wem_collect_metrics.py  wem_quality_gates.py
ui/: __init__.py  app.py  console.py  dashboard_data_provider.py  event_bus.py  main.py  main_window.py  navigation.py  page_registry.py  project_wizard.py  safe_io.py  sidebar.py  statusbar.py  theme.py  titlebar.py
validators/: __init__.py  asset_validator.py  (+4 more)
(+1743 files in other folders)
