[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agente-rme"
version = "2.0.0"
description = "OpenTibiaBR RME Map Agent — AI-powered Tibia map generator for RME"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenTibiaBR RME Agent Team"}
]
keywords = ["tibia", "otbm", "map-generator", "open-tibia", "rme"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)",
]

dependencies = [
    "customtkinter>=5.2.1",
    "ollama>=0.1.9",
    "requests>=2.31.0",
    "Pillow>=10.1.0",
    "lxml>=4.9.3",
    "numpy>=1.26.0",
    "sentence-transformers>=2.2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/opentibiabr/agente-rme"
Documentation = "https://github.com/opentibiabr/agente-rme/tree/main/docs"
Repository = "https://github.com/opentibiabr/agente-rme"

[project.scripts]
agente-rme = "cli:main"
rme-agent = "cli:main"

[tool.setuptools.packages.find]
include = ["core*", "core.*", "ai*", "assets*", "rag*", "generators*"]
exclude = ["tests*", "examples*", ".venv*", "installer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = [
    "core/exporters",
    "core/generators",
    "core/preview",
    "core/world",
    "config_manager",
]

[tool.coverage.report]
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
exclude = [
    "^\\.venv/",
    "^venv/",
    "^node_modules/",
    "^htmlcov/",
    "^htmlcov_autonomous/",
    "^htmlcov_critic/",
    "^htmlcov_critic_final/",
    "^output/",
    "^output_benchmark/",
    "^cache/",
    "^logs/",
    "^build/",
    "^dist/",
    "^baseline/",
    "^__pycache__/",
    "^generated/",
    "^hito26_1_benchmark\\.py$",
    "^ga_benchmark\\.py$",
    "^ga_certify\\.py$",
    "^benchmark_.*\\.py$",
    "^data_extractor\\.py$",
    "^reward_generator\\.py$",
    "^raid_generator\\.py$",
    "^quest_generator\\.py$",
    "^mission_generator\\.py$",
    "^boss_generator\\.py$",
    "^pipeline_runner\\.py$",
    "^tools/",
    "^installer/",
    "^examples/",
    "^test_utcnow\\.py$",
    "^test_orch_diag\\.py$",
    "^test_otbm_diag\\.py$",
    "^test_orch_diag\\.txt$",
    "^_write_all\\.py$",
    "^_write_file\\.py$",
    "^_write_test\\.py$",
    "^_write_final\\.py$",
    "^_gen_.*\\.py$",
    "^_fix_flake8\\.py$",
    "^_rem\\.py$",
    "^_tmp_write\\.py$",
    "^_update_tests\\.py$",
    "^_viz_test\\.py$",
    "^_wf\\.py$",
    "^_b64payload\\.txt$",
    "^_create_tests\\.py$",
    "^_append_test\\.py$",
    "^create_tests\\.py$",
    "^generate_all_tests\\.py$",
    "^generate_report\\.py$",
    "^generate_tests\\.py$",
    "^gen_coverage\\.py$",
    "^run_all\\.py$",
    "^run_coverage\\.py$",
    "^run_e2e\\.py$",
    "^run_integration\\.py$",
    "^run_pytest\\.py$",
    "^smoke_critic\\.py$",
    "^smoke_knowledge\\.py$",
    "^show_cov\\.py$",
    "^show_cov_out\\.txt$",
    "^pytest_out\\.txt$",
    "^pytest_results\\.txt$",
    "^agent_test_output.*\\.txt$",
    "^benchmark_.*\\.txt$",
    "^common_test_output.*\\.txt$",
    "^campaign_test_output\\.txt$",
    "^otbm_test_output\\.txt$",
    "^final_test_output\\.txt$",
    "^lua_test_output\\.txt$",
    "^arch_test\\.txt$",
    "^cov_full\\.txt$",
    "^cov_v2\\.txt$",
    "^cov_v3\\.txt$",
    "^enc1\\.txt$",
    "^utcnow_check\\.txt$",
    "^agent_coverage\\.txt$",
    "^validate_hito_.*\\.py$",
    "^audit_.*\\.py$",
    "^check_utcnow\\.py$",
    "^fix_utcnow\\.py$",
    "^config_manager\\.py$",
    "^mkall\\.py$",
    "^ollama_client\\.py$",
    "^audit_report\\.md$",
    "^vs_buildtools\\.exe$",
    "^nul\\)$",
    "^-p/",
]

[tool.bandit]
exclude_dirs = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "htmlcov",
    "htmlcov_autonomous",
    "htmlcov_critic",
    "htmlcov_critic_final",
    "node_modules",
    "output",
    "output_benchmark",
    "cache",
    "logs",
]