[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rme-engine"
version = "1.0.0"
description = "Agente RME engine package"
requires-python = ">=3.11"
readme = "README.md"
license = "LicenseRef-Proprietary"
dependencies = [
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[tool.setuptools]
py-modules = ["rme"]

[tool.setuptools.packages.find]
include = ["core*", "golden_master*", "live_learning*", "mapping*", "world_generation*"]
exclude = ["tests*", "ui*", "baseline*", "rc_build_wheels*", "rc_split_output*"]
